Initial commit of Personal Profile project

--- a/web/profile_form.html
+++ b/web/profile_form.html
@@ -1,78 +1,81 @@
 <!DOCTYPE html>
 <html>
-<head>
-    <title>Create Profile</title>
-    <style>
-        body {
-            font-family: 'Arial', sans-serif;
-            background-color: #FCE1FA;
-            color: #4a235a;
-            margin: 0;
-            padding: 0;
-        }
-        .form-container {
-            width: 500px;
-            margin: 50px auto;
-            background: white;
-            border-radius: 15px;
-            box-shadow: 0 8px 20px rgba(0,0,0,0.2);
-            padding: 30px;
-        }
-        h2 {
-            text-align: center;
-            margin-bottom: 30px;
-        }
-        input, textarea {
-            width: 100%;
-            padding: 10px;
-            margin: 8px 0 15px 0;
-            border: 1px solid #ccc;
-            border-radius: 8px;
-            box-sizing: border-box;
-        }
-        button {
-            width: 100%;
-            background-color: #8e44ad;
-            color: white;
-            padding: 15px;
-            font-size: 18px;
-            border: none;
-            border-radius: 10px;
-            cursor: pointer;
-            transition: 0.3s;
-        }
-        button:hover {
-            background-color: #732d91;
-        }
-        label {
-            font-weight: bold;
-        }
-    </style>
-</head>
-<body>
-    <div class="form-container">
-        <h2>Create Your Personal Profile</h2>
-        <form action="profile.controller" method="POST">
-            <label>Name:</label>
-            <input type="text" name="name" required>
+    <head>
+        <title>Create Profile</title>
+        <style>
+            body {
+                font-family: 'Arial', sans-serif;
+                background-color: #FCE1FA;
+                color: #4a235a;
+                margin: 0;
+                padding: 0;
+            }
+            .form-container {
+                width: 500px;
+                margin: 50px auto;
+                background: white;
+                border-radius: 15px;
+                box-shadow: 0 8px 20px rgba(0,0,0,0.2);
+                padding: 30px;
+            }
+            h2 {
+                text-align: center;
+                margin-bottom: 30px;
+            }
+            input, textarea {
+                width: 100%;
+                padding: 10px;
+                margin: 8px 0 15px 0;
+                border: 1px solid #ccc;
+                border-radius: 8px;
+                box-sizing: border-box;
+            }
+            button {
+                width: 100%;
+                background-color: #8e44ad;
+                color: white;
+                padding: 15px;
+                font-size: 18px;
+                border: none;
+                border-radius: 10px;
+                cursor: pointer;
+                transition: 0.3s;
+            }
+            button:hover {
+                background-color: #732d91;
+            }
+            label {
+                font-weight: bold;
+            }
+        </style>
+    </head>
+    <body>
+        <div class="form-container">
+            <h2>Create Your Personal Profile</h2>
+            <form action="profile.controller" method="POST">
+                <label>Name:</label>
+                <input type="text" name="name" required>
 
-            <label>Student ID:</label>
-            <input type="text" name="studentId" required>
+                <label>Student ID:</label>
+                <input type="text" name="studentId" required>
 
-            <label>Program:</label>
-            <input type="text" name="program" required>
+                <label>Program:</label>
+                <input type="text" name="program" required>
 
-            <label>Email:</label>
-            <input type="email" name="email" required>
+                <label>Email:</label>
+                <input type="email" name="email" required>
 
-            <label>Hobbies:</label>
-            <input type="text" name="hobbies">
+                <label>Hobbies:</label>
+                <input type="text" name="hobbies">
 
-            <label>Self Introduction:</label>
-            <textarea name="intro" rows="5"></textarea>
+                <label>Self Introduction:</label>
+                <textarea name="introduction" rows="5"></textarea>
 
-            <button type="submit">Submit</button>
-        </form>
-    </div>
-</body>
+                <button type="submit">Submit</button>
+                <br><br>
+                <button type="button" onclick="window.location.href = 'index.html'">Back to Home</button>
+
+            </form>
+        </div>
+    </body>
 </html>
